--- a/questions/question.html
+++ b/questions/question.html
@@ -38,6 +38,14 @@
                 </div>
             </div>
             <div style="display: flex; gap: 0.5rem; font-size: larger;">
+                <div id="">
+                    <p>category -</p>
+                </div>
+                <div>
+                    <p id="catSHow"></p>
+                </div>
+            </div>
+            <div style="display: flex; gap: 0.5rem; font-size: larger;">
                 <div>
                     <p>Difficulty - </p>
                 </div>
@@ -61,9 +69,9 @@
     <!-- <div id="showOptions"> --> 
       <!-- <button id="subBtn">Submit</button> -->
     <!-- </div> -->
-     <div id="correctAns">
+     <!-- <div id="correctAns">
 
-     </div>
+     </div> -->
      <div id="errMsg">
 
      </div>
