--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trivia APP</title>
     <link rel="stylesheet" href="/index.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <!-- AppBar -->
@@ -21,6 +22,9 @@
       </div>
     </div>
     <div style="padding-top:120px; margin: 0 10px; display: flex; flex-direction: column; justify-content: center; margin-bottom: 20px;gap: 1rem;" id="content">
+      <button id="guidBook" >
+      <a href="guideBook/guideBook.html">GuideBook</a>
+    </button>
       <div style="display: flex; justify-content: space-between;">
         <div>
             <input
